# xtremevote

./: .gitignore  Cargo.toml  config.toml  rustfmt.toml  votes.db
migrations/20190203204345_create_votes/: down.sql  up.sql
migrations/20190203204346_create_votes/: up.sql
src/: db.rs  main.rs  migrations.rs  style.css  template.html  templates.rs  uvotes.sql
